Book: typo corrected in plain text table section
The numeric data type meta data elements of the examples were missing the
size of the type. For example we had `i' (instead of `i8') or `f' (instead
of `f32'). With this commit, this is corrected.

--- a/doc/gnuastro.texi
+++ b/doc/gnuastro.texi
@@ -9499,8 +9499,8 @@ table (the first one, with nothing but the column number is redundant):
 
 @example
 # Column 5:
-# Column 1: ID [,i] The Clump ID.
-# Column 3: mag_f160w [AB mag, f] Magnitude from the F160W filter
+# Column 1: ID [,i8] The Clump ID.
+# Column 3: mag_f160w [AB mag, f32] Magnitude from the F160W filter
 @end example
 
 @noindent
@@ -9539,7 +9539,7 @@ manually later. If only one of the leading or trailing white spaces is
 important for your work, you can only use one of the `@key{|}'s.
 
 @example
-# Column 1: ID [label, uc]
+# Column 1: ID [label, u8]
 # Column 2: Notes [no unit, str50]
 1    leading and trailing white space is ignored here    2.3442e10
 2   |         but they will be preserved here        |   8.2964e11
