Warp: sanity check when option value is empty string
Until now, when the value to individual warp options was an empty string,
it would crash with a segmentation fault. With this commit, a check has
been added so in such cashes it aborts with a reason.

This fixes bug #56424.

--- a/NEWS
+++ b/NEWS
@@ -87,6 +87,7 @@ See the end of the file for license conditions.
   bug #56257: ConvertType: Values not preserved when converting text to FITS.
   bug #56299: cosmiccal fails at z=0.
   bug #56324: Column metadata not usable when input is from pipe/stdin.
+  bug #56424: Warp crashes with empty string given to options.
 
 
 
